--- a/index.html
+++ b/index.html
@@ -204,7 +204,11 @@
             This page will dynamically load pictures from the web, and display
             them in a cool way!
           </p>
-          <input onchange="" type="search" placeholder="Search For any Image" />
+          <input
+            type="search"
+            placeholder="Search For any Image"
+            onchange="filterImages(event)"
+          />
           <p>
             <a href="#" class="btn btn-primary my-2 load-img">Load Images</a>
             <a href="#" class="btn btn-secondary my-2 load-sec-img"
